<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PerfectPosture</string>
    <string name="no_sensors">This device does not have the required sensors!  Sorry.</string>
    <string name="pref_vibrate">Vibrate Alerts</string>
    <string name="pref_vibrate_summ">Allow short vibrations to indicate bad posture</string>
    <string name="cdesc_pref_vibrate">enable vibration alerts</string>
    <string name="pref_notification">Notification Alerts</string>
    <string name="pref_notification_summ">Send notification icons to the top of the screen to alert bad posture</string>
    <string name="cdesc_pref_notification">enable notification icon alerts</string>
    <string name="pref_led">LED Alerts</string>
    <string name="pref_led_summ">Turn on/off LED to alert bad posture (not implemented yet)</string>
    <string name="cdesc_pref_led">enable LED alerts, but this is not working yet</string>
    <string name="pref_chin_tuck">Chin Tuck Reminders</string>
    <string name="pref_chin_tuck_summ">Get an alert every 15 minutes to do a chin tuck exercise</string>
    <string name="cdesc_pref_chin_tuck">enable chin tuck exercise reminders</string>
    <string name="cdesc_pref_checkbox">checkbox for the previous preference description</string>
    <string name="pref_sensitivity">Alert sensitivity setting</string>
    <string name="pref_sensitivity_summ">This controls both the sensitivity and frequency of alerts.</string>
    <string name="cdesc_pref_sensitivity">sensitivity setting</string>
    <string name="sensitivity_low">Low</string>
    <string name="sensitivity_medium">Medium</string>
    <string name="sensitivity_high">High</string>

    <string name="start_tilt_detection">Start Posture Detection</string>
    <string name="stop_tilt_detection">Stop Posture Detection</string>
    <string name="service_notification_text">PerfectPosture service is running</string>
    <string name="posture_notification_text">Hold the phone more vertically</string>
    <string name="chin_tuck_notification_text">Time for a chin tuck exercise</string>
    <string name="turn_off_service">Turn off service</string>
    <string name="open_application">Open the application</string>

    <string name="no_chart_data">"Start posture detection to create a chart!"</string>
    <string name="posture_readings">Posture Readings</string>
    <string name="cdesc_linechart">chart showing posture data versus time</string>
    <string name="max_forward_tilt">"max forward tilt"</string>
    <string name="max_backward_tilt">"max backward tilt"</string>
    <string name="best_posture">"best posture"</string>

    <string name="page_title_intro">Intro</string>
    <string name="page_title_data">Data</string>
    <string name="page_title_settings">Settings</string>
    <string name="cdesc_tabstrip">navigation tabs</string>

    <string name="intro_fragment_text">This is the introduction page</string>
    <string name="cdesc_intro">introduction text</string>
    <string name="clear_data_button_text">Clear Data</string>

    <string name="cdesc_viewpager">horizontal pager navigation</string>

</resources>
